[package]
name = "atlas-framedb"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Atlas vector store index integration for framedb."
repository = "https://github.com/0xPlaygrounds/atlas"

[dependencies]
framedb = "0.10.0"
atlas-core = { path = "../atlas-core", version = "0.6.0" }
arrow-array = "52.2.0"
serde_json = "1.0.128"
serde = "1.0.210"
futures = "0.3.30"

[dev-dependencies]
tokio = "1.40.0"
anyhow = "1.0.89"

[[example]]
name = "vector_search_local_ann"
required-features = ["atlas-core/derive"]

[[example]]
name = "vector_search_local_enn"
required-features = ["atlas-core/derive"]

[[example]]
name = "vector_search_s3_ann"
required-features = ["atlas-core/derive"]

[[test]]
name = "integration_tests"
required-features = ["atlas-core/derive"]
